# lady-saying

./: Cargo.toml
projects/lady-saying/: Cargo.toml
projects/lady-saying/src/: lib.rs
projects/lady-saying/src/saying/: builtin.json5  mod.rs
projects/lady-saying/tests/: main.rs
projects/web-saying/: Cargo.toml
projects/web-saying/src/: lib.rs  main.rs
projects/web-saying/src/components/: mod.rs  saying.rs  styling.css
